fixed z-index of searchbar

--- a/src/index.css
+++ b/src/index.css
@@ -78,17 +78,33 @@ body, html {
   position: absolute;
   left: 60px;
   top: 25px;
-  z-index: 12000;
+  z-index: 10080;
 }
 
 .searchInput {
   height: 30px;
   width: 190px;
-  margin-right: 5px; 
+
+  margin-right: 5px;
+  padding-left: 5px;
+  border:none;
+  font-size: 1em;
+  font-family: 'Abel', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: bold;
 }
 
+.searchInput:focus {
+  outline:0;
+}
+
+.searchInput::placeholder {
+  color: #999;
+
+}
 .searchButton {
-  height: 30px;
+  height: 29px;
 }
 
 /* LOGIN MODAL */
